# hosted-aurey

./: .cursorignore  .env.example  .gitignore  1claw-integration-plan.md  Dockerfile.http  README.md  alembic.ini  lifi-queries.md  platform-api.md  pyproject.toml  railway.http.toml  railway.toml  run_http.py  run_telegram.py
alembic/: env.py
docs/: 1claw-curls.example.txt  hosted-aurey-platform-runbook.md
miniapp/: README.md  index.html  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
scripts/: 1claw-console-setup.placeholder.sh
tests/: _tool_schemas_snapshot.json  conftest.py  leakage_helpers.py  test_agent_tools.py  test_agent_trace.py  test_api_key_resolution.py  test_claim_status.py  test_cloud_oidc.py  test_cloud_onboarding.py  test_cloud_platform_client.py  test_conversation_thread.py  test_evm_codec.py  test_evm_tx_pipeline.py  test_graphs_runtime.py  test_hosted_credentials.py  test_hosted_email_templates.py  test_hosted_handle_claim.py  test_hosted_invite_sender_notify.py  test_hosted_provision.py  test_hosted_recipient_lookup.py  test_hosted_send_invite.py  test_hosted_solana_intent.py  test_hosted_sync_wallet_http.py  test_hosted_telegram_access_request.py  test_hosted_transfer_notify_lookup.py  test_hosted_wallet_addresses.py  test_hosted_wallet_lookup.py  test_intents_principal.py  test_invoke_runtime.py  test_known_addresses.py  test_langgraph_pg_conn_string.py  test_langsmith_trace_patch.py  test_lifi_catalog.py  test_lifi_envelope.py  test_lifi_import.py  test_lifi_tokens.py  test_message_content.py  (+36 more)
(+193 files in other folders)
